First exploration of dark mode, gradient in chakra

--- a/styles/shared/scss/blue_s.scss
+++ b/styles/shared/scss/blue_s.scss
@@ -1,18 +1,18 @@
 /* Coolors Exported Palette - https://coolors.co/03045e-0077b6-00b4d8-90e0ef-caf0f8 */
 
 /* CSS HEX */
---midnight-blue: #03045eff;
---star-command-blue: #0077b6ff;
---pacific-blue: #00b4d8ff;
---middle-blue: #90e0efff;
---light-cyan: #caf0f8ff;
+// --midnight-blue: #03045eff;
+// --star-command-blue: #0077b6ff;
+// --pacific-blue: #00b4d8ff;
+// --middle-blue: #90e0efff;
+// --light-cyan: #caf0f8ff;
 
 /* CSS HSL */
---midnight-blue: hsla(239, 94%, 19%, 1);
---star-command-blue: hsla(201, 100%, 36%, 1);
---pacific-blue: hsla(190, 100%, 42%, 1);
---middle-blue: hsla(189, 75%, 75%, 1);
---light-cyan: hsla(190, 77%, 88%, 1);
+// --midnight-blue: hsla(239, 94%, 19%, 1);
+// --star-command-blue: hsla(201, 100%, 36%, 1);
+// --pacific-blue: hsla(190, 100%, 42%, 1);
+// --middle-blue: hsla(189, 75%, 75%, 1);
+// --light-cyan: hsla(190, 77%, 88%, 1);
 
 /* SCSS HEX */
 $midnight-blue: #03045eff;
