--- a/styles/shared/scss/grey.scss
+++ b/styles/shared/scss/grey.scss
@@ -1,26 +1,26 @@
 /* Coolors Exported Palette - https://coolors.co/f8f9fa-e9ecef-dee2e6-ced4da-adb5bd-6c757d-495057-343a40-212529 */
 
 /* CSS HEX */
---cultured: #f8f9faff;
---cultured-2: #e9ecefff;
---gainsboro: #dee2e6ff;
---light-gray: #ced4daff;
---cadet-blue-crayola: #adb5bdff;
---sonic-silver: #6c757dff;
---davys-grey: #495057ff;
---onyx: #343a40ff;
---eerie-black: #212529ff;
+// --cultured: #f8f9faff;
+// --cultured-2: #e9ecefff;
+// --gainsboro: #dee2e6ff;
+// --light-gray: #ced4daff;
+// --cadet-blue-crayola: #adb5bdff;
+// --sonic-silver: #6c757dff;
+// --davys-grey: #495057ff;
+// --onyx: #343a40ff;
+// --eerie-black: #212529ff;
 
 /* CSS HSL */
---cultured: hsla(210, 17%, 98%, 1);
---cultured-2: hsla(210, 16%, 93%, 1);
---gainsboro: hsla(210, 14%, 89%, 1);
---light-gray: hsla(210, 14%, 83%, 1);
---cadet-blue-crayola: hsla(210, 11%, 71%, 1);
---sonic-silver: hsla(208, 7%, 46%, 1);
---davys-grey: hsla(210, 9%, 31%, 1);
---onyx: hsla(210, 10%, 23%, 1);
---eerie-black: hsla(210, 11%, 15%, 1);
+// --cultured: hsla(210, 17%, 98%, 1);
+// --cultured-2: hsla(210, 16%, 93%, 1);
+// --gainsboro: hsla(210, 14%, 89%, 1);
+// --light-gray: hsla(210, 14%, 83%, 1);
+// --cadet-blue-crayola: hsla(210, 11%, 71%, 1);
+// --sonic-silver: hsla(208, 7%, 46%, 1);
+// --davys-grey: hsla(210, 9%, 31%, 1);
+// --onyx: hsla(210, 10%, 23%, 1);
+// --eerie-black: hsla(210, 11%, 15%, 1);
 
 /* SCSS HEX */
 $cultured: #f8f9faff;
