--- a/styles/shared/scss/oxford.scss
+++ b/styles/shared/scss/oxford.scss
@@ -1,18 +1,18 @@
 /* Coolors Exported Palette - https://coolors.co/000022-001242-0094c6-005e7c-040f16 */
 
 /* CSS HEX */
---oxford-blue: #000022ff;
---oxford-blue-2: #001242ff;
---blue-ncs: #0094c6ff;
---blue-sapphire: #005e7cff;
---rich-black-fogra-29: #040f16ff;
+// --oxford-blue: #000022ff;
+// --oxford-blue-2: #001242ff;
+// --blue-ncs: #0094c6ff;
+// --blue-sapphire: #005e7cff;
+// --rich-black-fogra-29: #040f16ff;
 
 /* CSS HSL */
---oxford-blue: hsla(240, 100%, 7%, 1);
---oxford-blue-2: hsla(224, 100%, 13%, 1);
---blue-ncs: hsla(195, 100%, 39%, 1);
---blue-sapphire: hsla(195, 100%, 24%, 1);
---rich-black-fogra-29: hsla(203, 69%, 5%, 1);
+// --oxford-blue: hsla(240, 100%, 7%, 1);
+// --oxford-blue-2: hsla(224, 100%, 13%, 1);
+// --blue-ncs: hsla(195, 100%, 39%, 1);
+// --blue-sapphire: hsla(195, 100%, 24%, 1);
+// --rich-black-fogra-29: hsla(203, 69%, 5%, 1);
 
 /* SCSS HEX */
 $oxford-blue: #000022ff;
