--- a/styles/shared/scss/purple.scss
+++ b/styles/shared/scss/purple.scss
@@ -1,12 +1,12 @@
 /* Coolors Exported Palette - https://coolors.co/3a015c-11001c */
 
 /* CSS HEX */
---russian-violet: #3a015cff;
---xiketic: #11001cff;
+// --russian-violet: #3a015cff;
+// --xiketic: #11001cff;
 
 /* CSS HSL */
---russian-violet: hsla(278, 98%, 18%, 1);
---xiketic: hsla(276, 100%, 5%, 1);
+// --russian-violet: hsla(278, 98%, 18%, 1);
+// --xiketic: hsla(276, 100%, 5%, 1);
 
 /* SCSS HEX */
 $russian-violet: #3a015cff;
