--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,7 @@
+@layer reset, base, tokens, recipes, utilities;
+
 :root {
+  font-family: 'DM Sans' 'DM Sans fallback';
     --t-bg: #fff;
     --t-scrollbar: #eee;
     --t-scrollbar-hover: #bbb;
