--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -1,15 +1,15 @@
 :root {
-  --background-primary: var(--manatee-50, #f7f7f7);
-  --background-secondary: var(--manatee-100, #ecedec);
-  --text-primary: var(--manatee-900, #54565b);
-  --text-secondary: var(--manatee-700, #7b7d87);
-  --accent: var(--manatee-500, #a4a7b0);
-  --scrollbar: var(--manatee-200, #e0e2e5);
-  --scrollbar-hover: var(--manatee-300, #cdd0d4);
+  --background-primary: #ffffff;
+  --background-secondary: #ecedec;
+  --text-primary: #54565b;
+  --text-secondary: #7b7d87;
+  --accent: #a4a7b0;
+  --scrollbar: #e0e2e5;
+  --scrollbar-hover: #cdd0d4;
 
     /* Link colors */
-    --link-color: var(--manatee-600, #9497a1);
-    --link-hover-color: var(--manatee-800, #65686e);
+    --link-color: #9497a1;
+    --link-hover-color: #65686e;
 
     /* Responsive font sizes */
     --font-size-base: 1rem;
@@ -42,6 +42,12 @@ html {
 }
 
 html.dark {
+  color-scheme: dark;
+  background: #121212;
+  color: white;
+}
+
+/* html.dark {
   --background-primary: var(--manatee-950, #313235);
   --background-secondary: var(--manatee-900, #54565b);
   --text-primary: var(--manatee-100, #ecedec);
@@ -50,10 +56,10 @@ html.dark {
   --scrollbar: var(--manatee-800, #65686e);
   --scrollbar-hover: var(--manatee-700, #7b7d87);
 
-    /* Dark mode link colors */
+
     --link-color: var(--manatee-300, #cdd0d4);
     --link-hover-color: var(--manatee-100, #eef0f1);
-}
+} */
 
 /* Anchor tag styles */
 a {
@@ -229,12 +235,11 @@ html:not(.dark) [img-dark] {
 
 /* Heading styles with responsive font sizes */
 .prose h1 {
-  font-weight: 800;
+  font-weight: 600;
   font-size: var(--font-size-4xl);
   margin-top: 0;
   margin-bottom: 0.8888889em;
   line-height: 1.1111111;
-  color: var(--text-primary);
 }
 
 .prose h2 {
